# pareto-embedded-ai

./: .gitignore  CITATION.cff  LICENSE  README.md  pareto_coef.py
ESP32_S3/Fashion/main/: main_fashion_cnn.c  main_fashion_mlp.c  main_fashion_rlm.c  model_fashion_cnn.h
ESP32_S3/Figures/: sdkconfig.old
ESP32_S3/Figures/main/: cnn_weights.h  main_cnn_figures.c  main_mlp_figures.c  main_rlm_figures.c  rlm_weights.h
ESP32_S3/Mnist/: sdkconfig
ESP32_S3/Mnist/main/: main_cnn_mnist.c  main_mlp_mnist.c  main_rlm_mnist.c  model_mnist_cnn.h
ESP32_S3/main/: CMakeLists.txt  main.c  main_cnn.c  main_rlm_figuras.c
Prepare_Data/: prepare_dataset_split_fashion_mnist.py  prepare_dataset_split_figures.py  prepare_dataset_split_mnist.py
RPi_Pico/fashion/: pico_sdk_import.cmake
RPi_Pico/fashion/fashion_cnn/: main.c
RPi_Pico/fashion/fashion_mlp/: CMakeLists.txt  main.c  model_fashion_mlp.h  test_fashion_300.h
RPi_Pico/fashion/fashion_rlm/: CMakeLists.txt  main.c
RPi_Pico/figures/: CMakeLists.txt  sdkconfig
RPi_Pico/figures/cnn_figures/: CMakeLists.txt  main.c
RPi_Pico/figures/mlp_figures/: main.c  test_embedded.h
RPi_Pico/figures/rlm_figures/: main.c
RPi_Pico/mnist/: CMakeLists.txt
RPi_Pico/mnist/mnist_cnn/: main.c  test_mnist_300.h
RPi_Pico/mnist/mnist_mlp/: main.c  model_mnist_mlp.h
RPi_Pico/mnist/mnist_rlm/: main.c  model_mnist_rlm.h
RPi_Zero/fashion/cnn/: main.c
RPi_Zero/fashion/mlp/: main.c
RPi_Zero/fashion/mlr/: main.c  model_fashion_rlm.h
RPi_Zero/figures/cnn/: main_cnn.c
RPi_Zero/figures/mlp/: main_mlp.c  mlp_weights.h
RPi_Zero/mnist/: main.c
(+5 files in other folders)
